Background link update

--- a/hello_charlotte_MAL_List_theme.css
+++ b/hello_charlotte_MAL_List_theme.css
@@ -6,7 +6,7 @@ body{
 
 body:before {
 background-color: #9492C8;
-background-image: url(https://cdn.myanimelist.net/s/common/uploaded_files/1558953691-d217521f4acc00f687cf6b6972f158a7.jpeg);
+background-image: url(https://raw.githubusercontent.com/Berserker-Of-Akihabara/-Hello-Charlotte-MAL-theme/master/CHARLOTTE-ORACLE.jpg);
 background-position: center;
 background-repeat: no-repeat;
 background-size: cover;
